forgotID,password,signup UI added, visibility needs to be fixed

--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -6,7 +6,7 @@ body {
   width: 22rem;
   height: auto;
   border-radius: 2px;
-  box-shadow: 0 0 6px 0 rgba(0, 115, 230, 0, 3);
+  box-shadow: 0 0 6px 0 rgba(0, 115, 230, 0.3);
 }
 
 .LoginImg {
@@ -14,11 +14,13 @@ body {
   height: 5.5rem;
   border-radius: 50%;
   margin-left: 90px;
-  margin-top: -50px;
   border: 1px solid skyblue;
 }
 
 .PageTitle {
   margin-top: 100px;
   font-size: xx-large;
+}
+#passwordHelpInline {
+  margin-left: 10px;
 }
